修改底部信息

--- a/administration/index.html
+++ b/administration/index.html
@@ -63,7 +63,7 @@
 				<li>
 					<span>主办：宜宾市教育体育局</span>
 					<span>承办：宜宾市新宜集团</span>
-					<span>技术支持：有限公司宜宾市科信教育投资股份</span>
+					<span>技术支持：宜宾市科信教育投资股份有限公司</span>
 				</li>
 				<li>
 					<span>@2016  宜宾市智慧教育云平台</span>
