--- a/administration/index.html
+++ b/administration/index.html
@@ -66,7 +66,7 @@
 					<span>技术支持：宜宾市科信教育投资股份有限公司</span>
 				</li>
 				<li>
-					<span>@2016  宜宾市智慧教育云平台</span>
+					<span>CopyRight @2016-2017 宜宾市智慧教育云平台</span>
 					<span>联系电话：0831—83500071</span>
 				</li>
 			</ul>
