--- a/教师端/7-shetuanguanli/shetuanchengyuan.html
+++ b/教师端/7-shetuanguanli/shetuanchengyuan.html
@@ -154,7 +154,7 @@
 				</select>
 			</div>
 			<div class="path-right wx_path">
-				<form action="#">
+				<form action="">
 					<input placeholder="输入学生信息" type="text" />
 					<span class="sousuo wx_sousuotb"></span>
 				</form>
