--- a/教师端/7-shetuanguanli/shetuanchengyuan.html
+++ b/教师端/7-shetuanguanli/shetuanchengyuan.html
@@ -54,6 +54,10 @@
             </div>
             <!--右侧详情介绍-->
             <div class="shetuanchengyuan">
+              <!--    解散社团按钮   -->
+               <span class="jiesanshetuan">退出社团</span>
+               <div class="hrxian" style="clear:both;margin-bottom:10px;"></div>
+               
                <div class="chengyuanlist">
                    <ul>
                        <li>
