--- a/学情分析/jiaoyanzu/step1.html
+++ b/学情分析/jiaoyanzu/step1.html
@@ -524,7 +524,7 @@
 				}else if($('.exam_date input').val() == ''){
 					n+=5;
 				}else{
-					location.href='research_release2.html';
+					location.href='step2.html';
 				}
 				
 				
