--- a/学生端/5-ketangjilu/classRecord.html
+++ b/学生端/5-ketangjilu/classRecord.html
@@ -14,7 +14,7 @@
 		
 		<!--我的引用-->
 		<link rel="stylesheet" href="../css/tsakCenter.css" charset="utf-8"/>
-		<link rel="stylesheet" href="../css/classRecord2.css" charset="utf-8"/>
+		<link rel="stylesheet" href="../css/classRecord.css" charset="utf-8"/>
 		<script type="text/javascript" src="../common/My97DatePicker/WdatePicker.js"></script>
 	</head>
 	<body>
