--- a/administration/jiaocaiguanli.html
+++ b/administration/jiaocaiguanli.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/jiaocaiguanli.css">
 	<script type="text/javascript" src="common/js/jquery.1.8.2.min.js"></script>
 	<script src="common/js/jiaocaiguanli.js"></script>
+	<script src="common/js/X_query.js"></script>
 </head>
 
 <body>
