--- a/教师端/1-gerenziyuan/myziyuan.html
+++ b/教师端/1-gerenziyuan/myziyuan.html
@@ -364,7 +364,7 @@
                                         <td class="zhiyuanName">
                                             <a href="../3-gonggongziyuan/common_source.html" target="_blank">属的化学性质金属的化学性质性学性质</a>
                                         </td>
-                                        <td>
+                                        <td class="YstudentResources">
                                       		     属的化学性质金属的化学性质性学性质
                                         </td>
                                         <!--<td>
@@ -403,7 +403,7 @@
                                         <td class="zhiyuanName">
                                             <a href="../3-gonggongziyuan/common_source.html" target="_blank">属的化学性质金属的化学性质性学性质</a>
                                         </td>
-                                        <td>
+                                        <td class="YstudentResources">
                                       		     属的化学性质金属的化学性质性学性质
                                         </td>
                                         <!--<td>
@@ -783,12 +783,24 @@
 </div>
 
 <!-- 下发成功 弹层-->
-    <div class="del_down del_down2 xiafaSuccess" style="display:none;">
-        <div class="con">
-            <img src="../img/success.png">
-            <span class="text-text">取消成功</span>
-        </div>
+<div class="del_down del_down2 xiafaSuccess" style="display:none;">
+    <div class="con">
+        <img src="../img/success.png">
+        <span class="text-text">取消成功</span>
     </div>
+</div>
+
+
+<!--查看已回传资源详情-->
+<div class="del_down Ysame Ydetail" style="display: none">
+    <div class="hide"></div>
+    <div class="con">
+        <img src="../img/task_close.png">
+        <p>资源名称：整十数加减整十数.mp4</p>
+        <div class="Yvi"></div>
+    </div>
+</div>
+
 
 
 <!--灰色遮罩-->
