--- a/教师端/head.html
+++ b/教师端/head.html
@@ -108,7 +108,7 @@
 			    text-align:center;
 		    }
 		    .remind_list{
-		    	display: none !important;
+		    	display: none;
 		    	position: absolute;
 		    	top: 44px;
 		    	left: -160px;
