--- a/教师端/left.html
+++ b/教师端/left.html
@@ -19,8 +19,8 @@
 		border-bottom: 1px solid #fff;
 	}
 	.main_left_ztree{width: 100%;}
-	.otherMeun{width: 100%; height: 40px;line-height: 40px;cursor: pointer;background: #3d7bc3;font-size: 16px; color: white;border-top: 1px solid white;}
-	.otherMeun span{margin-left: 10px;}
+	/*.otherMeun{}
+	.otherMeun span{display: block;  width: 100%; height: 40px;line-height: 40px;cursor: pointer;background: #3d7bc3;font-size: 16px; color: white;border-top: 1px solid white; text-align: center;}*/
 </style>
 
 <div class="mainLeft">
@@ -29,11 +29,11 @@
 		<div class="content_wrap clearfix">
 			<div class="zTreeDemoBackground left">
 				<ul id="treeDemo" class="ztree"></ul>
-				<div class="otherMeun">
+				<!--<div class="otherMeun">
 					<span>其他</span>
-				</div>
+					<ul id="treeDemoOther" class="ztree"></ul>
+				</div>-->
 			</div>
-			
 		</div>
 	</div>
 </div>
